@@ -231,6 +231,12 @@
 		matches.
 	  </dd>
 	  <dt>
+		<strong>METADESCRIPTION</strong>
+	  </dt>
+	  <dd>
+		The meta description text (if any) for the matched document.
+	  </dd>
+	  <dt>
 		<strong>METHOD</strong>
 	  </dt>
 	  <dd>
@@ -407,7 +413,7 @@
 	</dl>
 	<hr size="4" noshade>
 
-	Last modified: $Date: 2000/04/11 03:18:01 $
+	Last modified: $Date: 2001/01/15 23:53:46 $
 
   </body>
 </html>
